working fetch and render

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Forecast</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
+    <title>5 Day Forcast</title>
 </head>
 <body>
+    <h1>5 Day Forcact</h1>
+    <div id="weather-results"></div>
     <script src="./assets/script.js"></script>
 </body>
 </html>
