added button and click function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     <h1>5 Day Forcact</h1>
+    <aside>
+        <!-- Div to search -->
+        <div class="search-div">
+            <h1>Search for a city:</h1>
+            <input />
+            <button>Search</button>
+        </div>
+        <!-- Div for previous searches -->
+        <div id="previous-searches">
+            <h1>Search History:</h1>
+        </div>
+    </aside>
     <div id="weather-results"></div>
     <script src="./assets/script.js"></script>
 </body>
